# A-Configurable-HTTP-Web-Server

./: .gitignore  CMakeLists.txt  README.md  temp.sh
cmake/: CodeCoverageReportConfig.cmake
conf/: deploy.conf
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
environment/env/: start.sh  update_packages.sh
environment/env/docker/: Dockerfile  apt-cacher.Dockerfile  devel_init.sh  start_lldb.sh
environment/templates/: init.sh
environment/templates/src/: CMakeLists.txt
environment/templates/src/docker/: Dockerfile  cloudbuild.yaml
files/: accept.html  create_form.html
include/: accept_handler.h  bad_request_handler.h  client.h  config_parser.h  create_form_handler.h  default_handler.h  delete_handler.h  echo_handler.h  error_handler.h  handler_manager.h  handler_parameter.h  header.h  health_handler.h  list_meme_handler.h  mime_types.h  proxy_handler.h  reply.h  request.h  request_handler.h  request_parser.h  response.h  response_parser.h  search_handler.h  server.h  session.h  static_handler.h  status_handler.h  types.h  utils.h  view_meme_handler.h
include/handler/: accept_handler.h  bad_request_handler.h  create_form_handler.h  default_handler.h  delete_handler.h  echo_handler.h  error_handler.h  health_handler.h  list_meme_handler.h  proxy_handler.h  request_handler.h  search_handler.h  static_handler.h  status_handler.h  view_meme_handler.h
src/: accept_handler.cc  bad_request_handler.cc  client.cc  config_parser.cc  create_form_handler.cc  default_handler.cc  delete_handler.cc  echo_handler.cc  error_handler.cc  handler_manager.cc  health_handler.cc  list_meme_handler.cc  mime_types.cc  mime_types.cpp  proxy_handler.cc  request_handler.cc  request_parser.cc  response.cc  response_parser.cc  search_handler.cc  server.cc  server_main.cc  session.cc  static_handler.cc  status_handler.cc  types.cc  utils.cc  view_meme_handler.cc
src/handler/: accept_handler.cc  bad_request_handler.cc  create_form_handler.cc  default_handler.cc  delete_handler.cc  echo_handler.cc  error_handler.cc  health_handler.cc  list_meme_handler.cc  proxy_handler.cc  search_handler.cc  static_handler.cc  status_handler.cc  view_meme_handler.cc
tests/: accept_handler_test.cc  bad_request_handler_test.cc  client_test.cc  config_parser_test.cc  consecutive_end_block  create_form_handler_test.cc  default_handler_test.cc  delete_handler_test.cc  echo_handler_test.cc  error_handler_test.cc  extra_semicolon  gmock_server_test.cc  handler_manager_test.cc  health_handler_test.cc  intergration_test.sh  list_meme_handler_test.cc  mime_types_test.cc  proxy_handler_test.cc  proxy_test.conf  request_parser_test.cc  response_parser_test.cc  response_test.cc  search_handler_test.cc  server_test.cc  session_test.cc  static_handler_test.cc  status_handler_test.cc  test.conf  unittest_main.cc  utils_test.cc  view_meme_handler_test.cc
tests/config_text/: missing_space  redundant_end_block  redundant_start_block
tests/echo/: echo_output  echo_output.txt
tests/files/userMemes/: meme1  meme2  meme3  meme4
tests/handler_manager_test/: test.conf
tests/proxy/: backend.conf
tests/server_test/: invalid_path.conf  invalid_port1.conf  invalid_port2.conf  invalid_port3.conf  valid_config.conf
tests/status/: status_output  status_output_expected
